<resources>
    <string name="app_name">iCredit</string>
    <string name="app_name_test">iCredit测试版</string>
    <string name="nav_header_title">iCredit</string>
    <string name="nav_header_subtitle">Welcome to iCredit</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="str_validate_num_input_hint"> please enter your SMS Code</string>
    <string name="str_validate_has_recived"> Send SMS Code</string>


    <string name="menu_My_loan">My loan</string>
    <string name="menu_My_Profile">My Profile</string>
    <string name="menu_Card">Card</string>
    <string name="menu_Bank_Account">Bank Account</string>
    <string name="menu_off_payment">Offline Transfer</string>
    <string name="menu_Message">Message</string>
    <string name="menu_Help">Help</string>
    <string name="menu_About">About</string>
    <string name="menu_ContactUs">Contact Us</string>
    <string name="menu_Log_out">Log out</string>
    <string name="menu_test1">Test nin and votor,s card</string>
    <string name="menu_test2">Test selfie</string>
    <string name="menu_share_file">Share</string>

    <string name="str_phone_input_hint">Your Phone number</string>
    <string name="str_pwd_confirm">Password</string>
    <string name="str_validate">Enter the  captcha</string>
    <string name="str_phone">Enter your phone number</string>
    <string name="str_send">SEND</string>
    <string name="validateNum">Resend SMS</string>
    <string name="str_pwd">Your 4-digit password</string>
    <string name="str_forgot_pwd">Forgot  password</string>
    <string name="str_login">SIGN IN</string>
    <string name="str_reg">SIGN UP</string>
    <string name="str_next">NEXT</string>
    <string name="str_allow">ALLOW</string>
    <string name="str_disagree">DISAGREE</string>
    <string name="str_login_phone_error"> please enter your correct phone number</string>
    <string name="str_pwd_input_hint">Password</string>
    <string name="str_pwd_confirm_input_hint">Confirm Password</string>

    <string name="str_read_agree">I agree to the</string>
    <string name="str_services">terms </string>
    <string name="str_privacy">terms &amp; condition</string>
    <string name="str_and">&amp;</string>
    <string name="str_money">₦ "%1$s"</string>
    <string name="str_reapply">You can reapply after "%1$s" days</string>
    <string name="str_permission_details">It is used to identify the user identity, prevent malicious programs and safe operation.</string>
    <string name="str_welcome">Welcome to iCredit!</string>
    <string name="str_all_permission_details">To assess your profile and create tailored loan products, we need to get your permissions for accessing information on your Phone, SMS.</string>
	<string name="str_peace_in_mind">LOAN UP TO</string>
    <string name="str_make_your_finance">Safe and reliable personal</string>
	<string name="str_register">REGISTER</string>
	<string name="str_insert_sim_card">Please insert a SIM card to continue</string>
    <string name="str_not_network">You are not connected to any Network. Please check your internet connection and try again</string>
	<string name="str_submit">SUBMIT</string>
    <string name="str_bind_new_card">BIND NEW CARD</string>
    <string name="str_Illegal_verification_code">Illegal verification code</string>
    <string name="str_Inconsistent_passwords">Your password does not match the confirm password</string>
    <string name="str_correct_phone_number">Please enter your correct phone number</string>
    <string name="str_basic_information_about_you">Basic information about you</string>
    <string name="str_first_name">First Name</string>
    <string name="str_middle_name">Other/middle Name (optional)</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_date_of_birth">Date of Birth</string>
    <string name="str_more_about_you">Tell us something more about you</string>
    <string name="str_bvn">BVN</string>
    <string name="str_personal_email">Personal Email</string>
    <string name="str_residential_address">Residential address</string>
    <string name="str_choose_from_list">Choose from list</string>
    <string name="str_street_name">Street name</string>
    <string name="str_street_number">Street number</string>
    <string name="str_about_you_referee">Tell us about you referee</string>
    <string name="str_first_referee_s">First Referee\' s</string>
    <string name="str_referee_full_leagal_name">Referee\' full leagal name</string>
    <string name="str_second_referee">Second Referee\' s</string>
    <string name="str_referee_mobile_number">Referee\' mobile number</string>
    <string name="str_three_referee">Third Referee\' s</string>
    <string name="str_four_referee">Four Referee\' s</string>
    <string name="str_ralationship">Ralationship</string>
    <string name="str_continue_to_fill_in">Continue to fill in</string>
    <string name="str_work_details">Tell us about you details information</string>
    <string name="str_number_of_spouses">Number of Spouses</string>
    <string name="str_any_foreign_debt">Is there any foreign debt?</string>
    <string name="str_gross_salary_monthly">Gross Salary(monthly)</string>
    <string name="str_employer_name">Employer Name</string>
    <string name="str_employer_address">Employer Address</string>
    <string name="str_working_status">Working Status</string>
    <string name="str_bank_acount_number">Bank Account Number</string>
    <string name="str_bank_name">Bank Name</string>
    <string name="str_done">Done</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_not_email">Please fill in the correct email address</string>
    <string name="str_sms">SMS</string>
    <string name="str_recording_function">Recording function</string>
    <string name="str_mail_list">Contacts</string>
    <string name="str_position">Location</string>
    <string name="str_sd_card">SD card</string>
    <string name="str_camera">Camera</string>
    <string name="str_mobile_phone_status">Mobile phone status</string>
    <string name="str_loan_product">Loan Product</string>
    <string name="str_loan_amount">Loan Amount :</string>
    <string name="str_repay_term">Repay Term :</string>
    <string name="str_bills_details">Bills details</string>
    <string name="str_origination_fee">Origination fee :</string>
    <string name="str_total_amount_due">Total Amount Due :</string>
    <string name="str_loan_purpose">Loan purpose :</string>
    <string name="str_apply_now">Apply Now</string>
    <string name="str_confirm_application">Confirm Application</string>
    <string name="str_application_detail">Review your application detail below.</string>
    <string name="str_due_date">Due date</string>
    <string name="str_total_amount">Total amount due</string>
    <string name="str_subject_change">Please note that the due date may be subject to change.</string>
    <string name="str_not_transfer_money">Please do not transfer money to any stranger. Be careful not to be cheated.</string>
    <string name="str_amount">Total Amount</string>
    <string name="we_will_approve_with_in_24_hours">We will approve with in 24 hours.</string>
    <string name="str_loan_details">Loan Details</string>
    <string name="str_disburse_date">Disburse date:</string>
    <string name="due_date">Due date:</string>
    <string name="str_make_a_repaymemt">Make a repaymemt</string>
    <string name="str_please_make_the_repayment_now">Please make the repayment now</string>
    <string name="str_rollover_fee">Rollover fee:</string>
    <string name="str_possible_reasons_why_your">Possible reasons why your</string>
    <string name="rstr_equest_is_declined">request is declined</string>
    <string name="str_apply_again">Apply Again</string>
    <string name="str_payment">Payment</string>
    <string name="str_confirnation">Confirnation</string>
    <string name="str_gender">Gender:</string>
    <string name="str_loading">loading...</string>
    <string name="str_version_update">Version Update</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_terms_of_service">Terms of Service</string>
    <string name="str_change_password">Change Password</string>

    <string name="str_uploadfail">loading fail</string>
    <string name="str_repayment">Repayment</string>
    <string name="str_overdue">Overdue</string>
    <string name="str_active">Active</string>
    <string name="str_process">Process</string>
    <string name="offline_payment_transfer">Offline Payment Transfer</string>

    <string name="facebook_app_id">190342719637645</string>
    <string name="fb_login_protocol_scheme">fb190342719637645</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="fcm_message" />
    <string name="bind_flutterwave">Flutterwave</string>
    <string name="paystack">Paystack</string>
    <string name="please_select_one_of_the_payment_channel">Please select one of the payment channel.</string>
    <string name="str_keep_a_good_credit_history">Dear customer, your current credit score does not support this loan duration.
Please  keep a good credit history by in time repayment.  This will greatly improve your credit score.</string>
    <string name="please_bind_your_bank_card">please bind your bank card</string>
    <string name="server_is_not_alive">server is not alive .</string>
    <string name="resend">Resend</string>
</resources>