<?xml version="1.0" encoding="utf-8"?>
<!--
<layout xmlns:android="http://schemas.android.com/apk/res/android">
-->

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_active"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_23"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_23"
                android:background="@mipmap/ic_repayment"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/str_amount"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:id="@+id/tv_all_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_9"
                android:text="₦ 22,800"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_30" />

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/we_will_approve_with_in_24_hours"
                android:textColor="@color/color_ff09c9b3"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/btn_offline_payment_transfer"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_payment_transfer"
                android:textColor="@color/color_4E5BFF"
                android:textSize="@dimen/sp_16" />

            <include
                android:id="@+id/ll_loan_detail"
                layout="@layout/layout_loan_item" />

            <Button
                android:id="@+id/btn_repaymemt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_42_67"
                android:layout_marginLeft="@dimen/dp_16_67"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_16_67"
                android:layout_marginBottom="@dimen/dp_72"
                android:background="@drawable/btn_login_selector"
                android:enabled="true"
                android:text="@string/str_make_a_repaymemt"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
<!--
</layout>
-->
