<?xml version="1.0" encoding="utf-8"?>
<!--
<layout>
-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_68"
            android:layout_height="@dimen/dp_68"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_hi_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/app_name"
            android:textColor="@color/color_424242"
            android:textSize="@dimen/sp_23" />

        <TextView
            android:id="@+id/tv_versionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V0.0.0.1"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_656565"
            android:textSize="@dimen/sp_16" />

        <RelativeLayout
            android:id="@+id/rl_Terms_of_Service"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_terms_of_service"
                android:layout_centerVertical="true"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"/>

            <ImageView
                android:src="@mipmap/btn_more"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"/>

            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/color_ffebebeb" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_Privacy_Policy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_privacy_policy"
                android:layout_centerVertical="true"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"/>

            <ImageView
                android:src="@mipmap/btn_more"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"/>

            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/color_ffebebeb" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_Version_Update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_version_update"
                android:layout_centerVertical="true"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"/>

            <ImageView
                android:src="@mipmap/btn_more"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"/>

            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/color_ffebebeb" />
        </RelativeLayout>
    </LinearLayout>
<!--
</layout>-->
